Update ManualModelCreatorPlugin.java